Fixed vertical alignment of block title layout

--- a/src/components/css/content.css
+++ b/src/components/css/content.css
@@ -20,7 +20,7 @@
 	background-color: black;
 	background-color: rgba(255,255,255,0.5);
 
-	padding: 7px 7px;
+	padding: 4px 7px;
 	position: relative;
 	width: 170px;
 	height: 37px;
@@ -55,6 +55,7 @@
 #block-content {
 	display: inline-block;
 	vertical-align: middle;
+	margin-top: 6px;
 	margin-left: 20px;
 
 	font-size: 16px;
